--- a/src/scene_point_etk/config.json
+++ b/src/scene_point_etk/config.json
@@ -1,5 +1,5 @@
 {
     "sensor_dataset_root": "<a path to the sensor dataset root>",
-    "change_pcd_dataset_root": "<a path to the change point cloud dataset root>",
+    "scene_dataset_root": "<a path to the change point cloud dataset root>",
     "patch_dataset_root": "<a path to the patch dataset root>"
 }
